setting the files and fixed some issues
